--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,17 @@
 # Compiled class file
 *.class
 
+# Build folder
+build/
+
 # Log file
 *.log
+
+# Bin file
+.bin
+
+# Lock file
+.lock 
 
 # BlueJ files
 *.ctxt
@@ -22,4 +31,4 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 replay_pid*
-A
+
